all done table in progress

--- a/src/Components/CSS/Banner.css
+++ b/src/Components/CSS/Banner.css
@@ -6,7 +6,7 @@
 
 .bannerContent {
   /* border: 2px solid red; */
-  height: 420px;
+  /* height: 420px; */
   display: flex;
   flex-direction: column;
   justify-content: space-around;
