--- a/src/Components/CSS/CoinsPage.css
+++ b/src/Components/CSS/CoinsPage.css
@@ -1,14 +1,40 @@
 .coinContainer {
   border: 2px solid white;
+  display: flex;
 }
 
 .coinInfo {
   border: 2px solid red;
-  width: 30%;
+  width: 40%;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 .coinCharts {
   border: 2px solid red;
   height: 100vh;
   width: 70%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.heading {
+  /* border: 2px solid red; */
+  font-size: 25px;
+  font-weight: bolder;
+  margin-bottom: 20px;
+  font-family: Montserrat;
+}
+@media (min-width: 20em) and (max-width: 40em) {
+  .coinContainer {
+    display: block;
+    width: 100%;
+  }
+  .coinInfo {
+    width: 100%;
+  }
+  .coinCharts {
+    width: 100%;
+  }
 }
